# tgTaskBotApplication

./: .gitignore  CMakeLists.txt  config.example.json
include/: bot.h  commands.h  config.h  database.h  task.h  taskManager.h  user.h  userInterface.h  userManager.h
src/: bot.cpp  commands.cpp  database.cpp  main.cpp  task.cpp  taskManager.cpp  user.cpp  userInterface.cpp  userManager.cpp
